# nokryptia

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.hotplug  README.md  TODO  configure  configure.in  nokryptia  nokryptia.1  nokryptia.cpp
hotplug/: cp5510.sh
man/: Makefile.am  Makefile.in  nokryptia.1.in
src/: Makefile.am  Makefile.in  config.h  config.h.in  nokryptia.cc
