dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/nokryptia.cc)
AM_INIT_AUTOMAKE(nokryptia,1.3)
AM_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Check if C compiler understands -c and -o at the same time
AC_PROG_CC_C_O
if eval "test \"`echo '$ac_cv_prog_cc_'${ac_cc}_c_o`\" = no"; then
      BROKEN_CC=
else
      BROKEN_CC=#
fi
AC_SUBST(BROKEN_CC)

AC_PROG_MAKE_SET

dnl Checks for libraries.
AC_CHECK_LIB(z, compress)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h iostream.h stdio.h)

dnl Checks for typedefs, structures, and compiler characteristics.
dnl AC_C_BIGENDIAN

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(strstr bcopy strcpy strncpy)

CXXFLAGS="-Wl,-rpath -Wl,/usr/local/lib"

AC_PROG_INSTALL
AC_ARG_PROGRAM

PACKAGE=nokryptia
VERSION=1.3

AC_LANG_CPLUSPLUS
AC_MSG_CHECKING(whether id3lib is installed)

AC_CHECK_LIB(id3, ID3Tag_New, , AC_MSG_WARN(:
*************************************************
id3lib is not installed!
Without it nokryptia will not be able to comoile.
You can download it from id3lib.sourceforge.net
*************************************************))

AC_OUTPUT(Makefile src/Makefile man/Makefile man/nokryptia.1)
